--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
                 font-size: 1.25em;
             }
         </style>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+      <script>
+          $(document).ready(function(){
+              $("button").click(function(){
+                  $("ul.professional-interests").toggle();
+              });
+          });
+      </script>
     </head>
     
     <body>
@@ -93,6 +101,20 @@
                             <li>Something Interesting</li>
                             <li>another one</li>
                             <li>AY</li>
+                        </ul>
+                    </section>
+                </div>
+            </main>
+            
+            <main>
+                <div class="content">
+                    <header>Professional Interests</header>
+                    <section class="interests">
+                        <button>Use Me to See My Professional Interests</button>
+                        <ul class="professional-interests">
+                            <li>JavaScript Web Development</li>
+                            <li>A cuppa Java</li>
+                            <li>Analyzing Data Using a Ruler</li>
                         </ul>
                     </section>
                 </div>
